--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-﻿<<html>
+<html>
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>Baf</title>
 </head>
 <body>
-	<p>Vstávej, semínko, holala, bude z tebe petržel.</p>
+	<p>Spát, semínko, holala, bude z tebe petržel.</p>
 	<p>Fiala 666?</p>
+	<Růže>
 </body>
 </html>
